kubernetes_OLD/yml/airflow.yaml
#echo "" >a.yaml && nano a.yaml && kubectl apply -f a.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow  
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: airflow
    http:
      paths:
      - path: /
        backend:
          serviceName: airflow-web
          servicePort: 8080
